--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -1,3 +1,29 @@
+// bg
 $headerFooterBg: #414141;
+$chartBg: #2E2E2E;
+$yellowBg: #FFCC21;
+$grayBg: #777777;
+$buttonBg: linear-gradient(180deg, #FFCC21 0%, #FF963C 100%);
+
+//text
 $whiteColor: #ffffff;
+
+//font-size
 $size11: 11px;
+$size12: 12px;
+$size14: 14px;
+$size15: 15px;
+$size18: 18px;
+$size20: 20px;
+$size22: 22px;
+$size25: 25px;
+
+//hover
+$buttonBgHover: linear-gradient(180deg, #fdc612 0%, #fab476 100%);
+$textHover: #FF963C;
+
+// margin top
+$mt56: 56px;
+
+//border
+$border: #707070;
