--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -9,6 +9,7 @@
   align-items: center;
   position: fixed;
   top: 0;
+  z-index: 1000;
 
   img {
     width: 109px;
@@ -19,11 +20,29 @@
   ul {
     width: calc(100% - 374px);
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    margin-right: 26px;
+
     li {
       display: flex;
       width: 160px;
       list-style: none;
+      cursor: pointer;
+
+      &:hover span {
+        color: $textHover;
+        transition: 0.5s;
+      }
+
+      a {
+        color: $whiteColor;
+        display: flex;
+      }
+
+      .active {
+        color: $textHover;
+      }
+
       img {
         width: 26px;
         height: 26px;
