--- a/src/components/MyRecord/BodyFatGraph/bodyfatgraph.scss
+++ b/src/components/MyRecord/BodyFatGraph/bodyfatgraph.scss
@@ -32,6 +32,8 @@
 
     li {
       p {
+        font-family: "Hiragino Kaku Gothic Pro";
+        font-weight: 300;
         color: $yellowBg;
         background-color: $whiteColor;
         margin-left: 16px;
