--- a/src/components/MyRecord/Diary/diary.scss
+++ b/src/components/MyRecord/Diary/diary.scss
@@ -34,6 +34,8 @@
         &:last-child {
           font-size: $size12;
           line-height: 17px;
+          font-family: "Hiragino Kaku Gothic Pro";
+          font-weight: 300;
         }
       }
     }
