--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -17,6 +17,7 @@ $size18: 18px;
 $size20: 20px;
 $size22: 22px;
 $size25: 25px;
+$size50: 50px;
 
 //hover
 $buttonBgHover: linear-gradient(180deg, #fdc612 0%, #fab476 100%);
