--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -5,6 +5,8 @@
   justify-content: center;
 
   button {
+    font-family: 'Hiragino Kaku Gothic Pro';
+    font-weight: 300;
     margin: 0 auto;
     background: $buttonBg;
     margin-top: 28px;
