--- a/src/components/MyPage/MealHistory/mealhistory.scss
+++ b/src/components/MyPage/MealHistory/mealhistory.scss
@@ -1,29 +1,52 @@
 @import "../../../variable";
 
 .mealhistory {
-  margin: 0px 160px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   .meal-content {
     position: relative;
     flex-basis: 24%;
-    height: 232px;
-    margin: 0px 8px 8px 0px;
+    height: fit-content;
+    margin-bottom: 10px;
+    line-height: 22px;
+
+    .hashtag-box {
+      display: flex;
+    }
 
     img {
       width: 100%;
-      height: 100%;
+      height: 145px;
       object-fit: cover;
     }
 
-    p {
+    .desciption {
       position: absolute;
-      bottom: 0;
-      width: 50%;
+      top: 109px;
+      min-width: 50%;
       color: $whiteColor;
       padding: 7px 25px 7px 8px;
       background: $yellowBg;
+      height: fit-content;
+    }
+
+    .tittle {
+      color: $headerFooterBg;
+      font-size: $size15;
+      line-height: 22px;
+      font-family: "Hiragino Kaku Gothic Pro";
+      font-weight: 300;
+    }
+
+    .hashtag {
+      color: $textHover;
+      font-size: $size12;
+      font-family: "Hiragino Kaku Gothic Pro";
+      font-weight: 300;
+      margin-bottom: 10px;
+      margin-right: 15px;
     }
   }
 }
