--- a/src/components/MyPage/Transit/transit.scss
+++ b/src/components/MyPage/Transit/transit.scss
@@ -1,7 +1,11 @@
 .transit {
   width: 100%;
   display: flex;
-  padding: 22px 282px;
+  padding: 22px 216px;
   height: 184px;
-  justify-content: space-between;
+  justify-content: space-around;
+
+  div {
+    flex-basis: 25%;
+  }
 }
