--- a/src/components/MyRecord/EntryScreen/detail.scss
+++ b/src/components/MyRecord/EntryScreen/detail.scss
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     padding: 24px;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,6 +49,8 @@
 
     a {
       color: $whiteColor;
+      font-family: "Hiragino Kaku Gothic Pro";
+      font-weight: 300;
     }
   }
 }
