--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -11,6 +11,10 @@
   top: 0;
   z-index: 1000;
 
+  .logo {
+    cursor: pointer;
+  }
+
   img {
     width: 109px;
     height: 58px;
@@ -24,6 +28,8 @@
     margin-right: 26px;
 
     li {
+      font-family: "Hiragino Kaku Gothic Pro";
+      font-weight: 300;
       display: flex;
       width: 160px;
       list-style: none;
@@ -57,6 +63,50 @@
           height: 15px;
           top: -4px;
           right: -8px;
+        }
+      }
+
+      &:last-child {
+        position: relative;
+
+        ul {
+          position: absolute;
+          width: 280px;
+          top: 33px;
+          right: 108px;
+          display: flex;
+          flex-direction: column;
+          z-index: 2000;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+          li {
+            flex-basis: 100%;
+            font-family: "Hiragino Kaku Gothic Pro";
+            font-weight: 300;
+            background: $grayBg;
+            width: 100%;
+            height: 71px;
+            padding: 23px 32px;
+            font-size: $size18;
+            border-bottom: 1px solid rgba(46, 46, 46, 0.25);
+            color: $whiteColor;
+
+            &:hover {
+              background: $headerFooterBg;
+              transition: 1s;
+            }
+          }
+        }
+
+        .display {
+          visibility: visible;
+          opacity: 1;
+          transition: 0.4s;
+        }
+
+        .none {
+          visibility: hidden;
+          opacity: 0;
         }
       }
     }
