--- a/src/components/MyPage/mypage.scss
+++ b/src/components/MyPage/mypage.scss
@@ -1,8 +1,14 @@
+@import "../../variable";
+
 .my-page {
   margin-top: 64px;
   min-height: 100vh;
 
   .meal-history-box {
     margin: 0px 160px;
+
+    @include mobile {
+      margin: unset;
+    }
   }
 }
