--- a/src/components/Column/column.scss
+++ b/src/components/Column/column.scss
@@ -1,3 +1,9 @@
+@import "../../variable";
+
 .column-page {
   margin: 120px 160px 0px 160px;
+
+  @include mobile {
+    margin: 74px 0px 0px 0px;
+  }
 }
