--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -11,11 +11,21 @@
   align-items: center;
   font-size: $size11;
   color: $whiteColor;
+
+  @include mobile {
+    padding-left: unset;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
   
   li {
     width: auto;
     margin-right: 45px;
     font-family: 'Hiragino Kaku Gothic Pro';
     font-weight: 300;
+
+    @include mobile {
+      flex-basis: 30%;
+    }
   }
 }
