--- a/src/components/MyPage/Achievement/achievement.scss
+++ b/src/components/MyPage/Achievement/achievement.scss
@@ -6,8 +6,17 @@
   width: 100%;
   flex-shrink: 0;
 
+  @include mobile {
+    flex-direction: column;
+    height: unset;
+  }
+
   .achievement-rate {
     width: 540px;
+    
+    @include mobile {
+      width: 100%;
+    }
 
     img {
       width: 100%;
@@ -21,6 +30,17 @@
       position: absolute;
       left: 180px;
       top: 130px;
+
+      @include mobile {
+        position: absolute;
+        left: 0px;
+        right: 0px;
+        width: 181px;
+        margin: 0px auto;
+        height: 181px;
+        object-fit: unset;
+        top: 195px;
+      }
     }
   }
 
@@ -30,8 +50,18 @@
     display: flex;
     align-items: center;
 
+    @include mobile {
+      width: 100%;
+      margin-top: $mt20;
+    }
+
     .chart {
       margin: 0 auto;
+
+      @include mobile {
+        width: 100%;
+        padding: 20px;
+      }
     }
 
     img {
