--- a/src/components/MyRecord/ExerciseRecord/exercise-record.scss
+++ b/src/components/MyRecord/ExerciseRecord/exercise-record.scss
@@ -53,6 +53,11 @@
       min-width: 416px;
       justify-content: space-between;
 
+      @include mobile {
+        min-width: unset;
+        width: 100%;
+      }
+
       span {
         color: $yellowBg;
         font-size: $size18;
