--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -11,6 +11,14 @@
   top: 0;
   z-index: 1000;
 
+  @include mobile {
+    justify-content: space-between;
+
+    .display-desktop {
+      display: none;
+    }
+  }
+
   .logo {
     cursor: pointer;
   }
@@ -19,6 +27,10 @@
     width: 109px;
     height: 58px;
     margin: 0px 156px;
+
+    @include mobile {
+      margin: unset;
+    }
   }
 
   ul {
@@ -69,6 +81,10 @@
       &:last-child {
         position: relative;
 
+        @include mobile {
+          justify-content: flex-end;
+        }
+
         ul {
           position: absolute;
           width: 280px;
@@ -78,6 +94,10 @@
           flex-direction: column;
           z-index: 2000;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+          @include mobile {
+            right: -14px;
+          }
 
           li {
             flex-basis: 100%;
@@ -93,8 +113,17 @@
 
             &:hover {
               background: $headerFooterBg;
+              color: $textHover;
               transition: 1s;
             }
+
+            @include mobile {
+              justify-content: unset;
+            }
+          }
+
+          .active {
+            color: $textHover;
           }
         }
 
